# Rain-VibeType

./: .gitignore  README.md  design-qa.md  package-lock.json  package.json
.agent/: ARCHITECTURE.md  DECISIONS.md  PROJECT.md  STATUS.md  TASKS.md  TESTING.md
docs/: MACOS_MIGRATION.md  WINDOWS_ACCEPTANCE.md  使用说明.md  测试报告.md
native-worker/: Cargo.toml
native-worker/src/: main.rs
scripts/: build-native-runtime.ps1  build-runtimes.ps1  build.ps1  compare-workers.py  export-sensevoice-onnx.ps1  release.ps1  run.ps1  setup-worker.ps1
src/: cancel.html  cancel.js  index.html  main.js  overlay.html  overlay.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: models.json  text-runtime-manifest.json
src-tauri/src/: audio.rs  config.rs  diagnostics.rs  main.rs  models.rs  platform_windows.rs  runtimes.rs  text_polish.rs  worker.rs
worker/: __init__.py  export-requirements.txt  export_sensevoice_onnx.py  rain_worker.py  requirements.txt  test_worker.py
